--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.4.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@telegram-apps/init-data-node": "^1.1.1",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
     "reflect-metadata": "^0.2.0",
